fix styling of select on safari mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@ $selected-font-element-height: 35px;
     position: absolute;
     margin: 0;
     padding: 0;
+    left: 50%;
   }
 }
 
